tests/fixtures/invalid/arg_count_mismatch.torel
unit fixtures.arg_count_mismatch;

proc id_exit(value: Exit) -> Exit {
    return value;
}

export proc main() -> Exit {
    return id_exit();
}
